Resolve alignment issues on Atwood page, test red box at end on mobile

--- a/p-byrne-articles.css
+++ b/p-byrne-articles.css
@@ -237,6 +237,12 @@ article.dialogue p.accreditation {
   max-width: 460px;
   text-align: left;
   margin: 0;
+  min-height: 0;
+}
+
+.atwood-poem {
+  margin: 0;
+  white-space: pre-line;
 }
 
 /* Allow other poems to overflow on mobiles but maintain spacing as in HTML */
@@ -383,13 +389,27 @@ body.P_Byrne::before {
     max-width: 100%;
   }
 
-  .poem-with-image .atwood4-poem-image {
-    max-width: 80%;
-  }
+.poem-with-image {
+  flex-direction: column;
+  align-items: flex-start;
+}
 
-  .poem-with-image .atwood-poem {
-    max-width: 100%;
-  }
+.poem-with-image .atwood4-poem-image {
+  max-width: 80%;
+  height: auto;
+}
+
+.poem-with-image .atwood-poem {
+  max-width: 100%;
+  margin: 0;
+  min-height: 0;
+  display: block;
+}
+
+.poem-with-image {
+  border: 2px solid red;
+}
+
 }
 
 @media (max-width: 600px) {
